syntax = "proto3";

package svr;

message EmptyMsg {
}
